--- a/app/styles/_helpers.scss
+++ b/app/styles/_helpers.scss
@@ -4,6 +4,8 @@ body {
   font-family: 'GOSTUI2';
 }
 
+
+
 a {
   transition: $tr;
 
@@ -37,34 +39,40 @@ button {
   flex: 1 0 auto;
 }
 
-.closeBtn {
-  position: absolute;
-  top: 25px;
-  right: 25px;
-  width: 20px;
-  height: 20px;
-  border: 1px solid $mc;
-  z-index: 1;
-  border-radius: 100%;
+
+// footerFlex down end
+
+
+
+// mmenu
+.mm-menu,
+.mm-slideout {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: $tr;
+  flex-direction: column;
+  height: 100%;
+}
 
-  i {
-    font-size: 13px;
-    color: $mc;
-  }
+.mm-wrapper_opening .mm-menu_fx-listitems-slide .mm-panel_opened .mm-listitem {
+  width: 100%;
+  max-width: 100%;
+}
 
-  &:hover {
-    transform: scale(1.5) rotate(360deg);
-    border: 1px solid red;
+.mm-listitem__text {
+  max-width: 170px;
+}
 
-    i {
-      color: red;
-    }
+.mm-listitem__btn:not(.mm-listitem__text) {
+  position: absolute;
+  right: 30%;
+
+  @media (max-width: 510.98px) {
+    right: 55%;
   }
 }
 
-// footerFlex down end
+#mm-3 {
+  padding-left: 0;
+}
+
+
+// mmenu end
