--- a/app/styles/_modalWindows.scss
+++ b/app/styles/_modalWindows.scss
@@ -10,6 +10,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  display: none;
+  z-index: 9999999;
+  padding: 0 15px;
 
   .registration {
     &__modalWindow {
@@ -21,6 +24,53 @@
       overflow: hidden;
       display: flex;
       flex-direction: row;
+
+      .closeBtn {
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        width: 20px;
+        height: 20px;
+        border: 1px solid $mc;
+        z-index: 1;
+        border-radius: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: $tr;
+
+        i {
+          font-size: 13px;
+          color: $mc;
+        }
+
+        &:hover {
+          transform: scale(1.5) rotate(360deg);
+          border: 1px solid red;
+
+          i {
+            color: red;
+          }
+        }
+      }
+
+      .closeBtnLeft {
+        border: 1px solid $w;
+
+        @media (max-width: 575.98px) {
+          border: 1px solid $mc;
+        }
+
+        i {
+          color: $w;
+
+          @media (max-width: 575.98px) {
+            color: $mc;
+          }
+        }
+      }
+
     }
 
     &__logoSide {
@@ -33,6 +83,10 @@
       align-items: center;
       padding-bottom: 22px;
       flex-direction: column;
+
+      @media (max-width: 575.98px) {
+        display: none;
+      }
 
       h2 {
         color: $w;
@@ -53,6 +107,11 @@
       width: 100%;
       max-width: 100%;
       padding: 37px;
+
+      @media (max-width: 575.98px) {
+        padding: 20px;
+      }
+
     }
 
     &__input {
@@ -183,6 +242,8 @@
   .nav-tabs {
     border: none;
 
+
+
     .nav-link {
       border: none;
       border-radius: 0;
@@ -194,18 +255,37 @@
       padding-bottom: 5px;
       padding-right: 45px;
       margin-right: 2px;
+      position: relative;
+
+      &:before {
+        position: absolute;
+        content: '';
+        height: 2px;
+        background-color: $mc;
+        width: 0;
+        transition: $tr;
+        bottom: 0;
+      }
 
       &:hover {
         font-weight: 700;
         color: $mc;
-        border-bottom: 2px solid $mc;
+
+        &:before {
+          width: 100%;
+          max-width: 100%;
+        }
       }
     }
 
     .active {
       font-weight: 700;
       color: $mc;
-      border-bottom: 2px solid $mc;
+
+      &:before {
+        width: 100%;
+        max-width: 100%;
+      }
     }
   }
 }
