--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,8 @@
 @import "_vars";
 @import "_helpers";
 @import "_header";
+@import "_add";
+@import "_hamburger";
 @import "_autorization";
 @import "_filter";
 @import "_share";
