--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,10 +17,15 @@
 @import "_vars";
 @import "_helpers";
 @import "_header";
-@import "_add";
+@import "_ad";
 @import "_hamburger";
 @import "_autorization";
 @import "_filter";
 @import "_share";
+@import "_likely";
 @import "_modalWindows";
 @import "_footer";
+
+
+
+
