--- a/app/styles/_share.scss
+++ b/app/styles/_share.scss
@@ -3,6 +3,7 @@
     right: 15px;
     top: 15px;
     display: flex;
+    align-items: center;
 
     p {
       margin-right: 10px;
@@ -15,10 +16,10 @@
       align-items: center;
       justify-content: center;
       flex-direction: row;
-      margin-top: -10px;
+      margin-top: -5px;
 
       div {
-        border: 1.5px solid $tc;
+        border: 1px solid $tc;
         width: 20px;
         height: 20px;
         border-radius: 100%;
@@ -26,6 +27,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-right: 8px;
+        cursor: pointer;
+
+        &:last-child {
+          margin-right: 0;
+        }
 
         i {
           font-size: 11px;
@@ -43,7 +50,9 @@
 
       .whithoutBorder {
         border: none;
-        i{
+        margin-top: 4px;
+
+        i {
           font-size: 20px;
         }
       }
