--- a/app/styles/_ad.scss
+++ b/app/styles/_ad.scss
@@ -1,14 +1,11 @@
 .ad {
   padding-top: 15px;
 
-
-
   &__img {
     align-items: center;
     position: relative;
     display: block;
     margin-bottom: 5px;
-    overflow: hidden;
 
     &:hover {
       &:before {
@@ -53,12 +50,22 @@
       font-size: 32px;
       margin: 0;
       line-height: 60px;
+
+      @media (max-width: 991.98px) {
+        font-size: 20px;
+        line-height: 40px;
+      }
     }
 
     p {
       font-size: 72px;
       margin: 0;
       line-height: 60px;
+
+      @media (max-width: 991.98px) {
+        font-size: 45px;
+        line-height: 40px;
+      }
     }
   }
 
@@ -75,11 +82,23 @@
     font-size: 16px;
     font-weight: 700;
     color: $b;
+
+    @media (max-width: 1199.98px) {
+      font-size: 13px;
+    }
+
+    &:hover {
+      color: $tc;
+    }
   }
 
   &__price {
     color: $b;
     margin: 0;
+
+    @media (max-width: 575.98px) {
+      font-size: 13px;
+    }
 
     span {
       color: rgba(51, 51, 51, 0.54);
@@ -100,9 +119,27 @@
   }
 
   &__items {
+    @media (max-width: 991.98px) {
+      margin-bottom: 10px;
+    }
+
+    @media (max-width: 767.98px) {
+      max-width: 300px;
+      margin: auto;
+      margin-bottom: 20px;
+    }
+
+    // &:last-child {
+    //   margin-bottom: 0;
+    // }
+
     &--indentItem {
       .ad__desc {
         padding-left: 30px;
+
+        @media (max-width: 991.98px) {
+          padding-left: 15px;
+        }
 
         @media (max-width: 575.98px) {
           padding-left: 0;
@@ -112,6 +149,10 @@
   }
 
   &__banner {
+    @media (max-width: 767.98px) {
+      display: none;
+    }
+
     img {
       width: 100%;
       max-width: 100%;
@@ -120,6 +161,10 @@
 
   .mainAdv {
     margin-bottom: 25px;
+
+    @media (max-width: 575.98px) {
+      margin-bottom: 0;
+    }
   }
 
   .secondaryAdv {
@@ -127,11 +172,20 @@
       h3 {
         font-size: 16px;
         line-height: 40px;
+
+        @media (max-width: 575.98px) {
+          line-height: 30px;
+        }
       }
 
       p {
         font-size: 45px;
         line-height: 40px;
+
+        @media (max-width: 575.98px) {
+          font-size: 30px;
+          line-height: 30px;
+        }
       }
     }
   }
