--- a/app/styles/_modalWindows.scss
+++ b/app/styles/_modalWindows.scss
@@ -1,6 +1,6 @@
 .blurEffect {
   background-color: rgba(0, 0, 0, 0.3);
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
@@ -13,6 +13,10 @@
   display: none;
   z-index: 9999999;
   padding: 0 15px;
+
+  &--blurEffectDone {
+    display: block;
+  }
 
   .registration {
     &__modalWindow {
@@ -287,5 +291,57 @@
         max-width: 100%;
       }
     }
+  }
+}
+
+
+
+.done {
+  &__wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+  }
+
+  &__window {
+    max-width: 726px;
+    width: 100%;
+    min-height: 471px;
+    background: $w;
+    box-shadow: 0px 2px 30px rgba(211, 225, 248, 0.8);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  &__img {
+    max-width: 112px;
+    width: 100%;
+    margin-bottom: 30px;
+
+    img {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
+
+  p {
+    text-align: center;
+    font-size: 24px;
+    color: $tc;
+    line-height: normal;
+    margin-bottom: 20px;
+  }
+
+  .btn {
+    max-width: 144px;
+    width: 100%;
+    min-height: 48px;
+    font-size: 24px;
   }
 }
