--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,6 +24,9 @@
 @import "_share";
 @import "_likely";
 @import "_modalWindows";
+@import "_privat";
+@import "_category";
+@import "_service";
 @import "_footer";
 
 
