--- a/app/styles/_ad.scss
+++ b/app/styles/_ad.scss
@@ -95,7 +95,7 @@
   &__price {
     color: $b;
     margin: 0;
-
+  font-weight: 500;
     @media (max-width: 575.98px) {
       font-size: 13px;
     }
@@ -119,6 +119,7 @@
   }
 
   &__items {
+    margin-bottom: 25px;
     @media (max-width: 991.98px) {
       margin-bottom: 10px;
     }
@@ -128,10 +129,6 @@
       margin: auto;
       margin-bottom: 20px;
     }
-
-    // &:last-child {
-    //   margin-bottom: 0;
-    // }
 
     &--indentItem {
       .ad__desc {
@@ -149,6 +146,8 @@
   }
 
   &__banner {
+    max-width: 180px;
+    width: 100%;
     @media (max-width: 767.98px) {
       display: none;
     }
@@ -156,37 +155,6 @@
     img {
       width: 100%;
       max-width: 100%;
-    }
-  }
-
-  .mainAdv {
-    margin-bottom: 25px;
-
-    @media (max-width: 575.98px) {
-      margin-bottom: 0;
-    }
-  }
-
-  .secondaryAdv {
-    .ad__discount {
-      h3 {
-        font-size: 16px;
-        line-height: 40px;
-
-        @media (max-width: 575.98px) {
-          line-height: 30px;
-        }
-      }
-
-      p {
-        font-size: 45px;
-        line-height: 40px;
-
-        @media (max-width: 575.98px) {
-          font-size: 30px;
-          line-height: 30px;
-        }
-      }
     }
   }
 }
