--- a/app/styles/_autorization.scss
+++ b/app/styles/_autorization.scss
@@ -1,26 +1,22 @@
 .autorization {
   margin-left: auto;
-  max-width: 100px;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
 
   @media (max-width: 575.98px) {
-    margin: auto;
+  // display: none;
   }
 
-  @media (max-width: 399.98px) {
-    margin-left: 0;
-  }
 
 
   &__link {
     color: $tc;
     font-weight: 400;
     line-height: normal;
-  }
+    }
 
   &__profile {
     max-width: 40px;
@@ -32,7 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+  margin-left: 10px;
     img {
       width: 100%;
       max-width: 100%;
